SERVER-50030 Fix kInternalClient check in dbcommands.cpp

(cherry picked from commit 79ad90cee37d361085ff42ea3b07287edf787896)