src/mongo/db/commands/dbcommands.cpp
@@ -343,7 +343,7 @@ public:
             uassert(ErrorCodes::InvalidOptions,
                     str::stream() << "the 'temp' field is an invalid option",
                     opCtx->getClient()->isInDirectClient() ||
-                        (opCtx->getClient()->session()->getTags() |
+                        (opCtx->getClient()->session()->getTags() &
                          transport::Session::kInternalClient));
         }
 
